[build-system]
requires = ["setuptools>=67", "setuptools_scm>=7", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "wagtailgridder/_version.py"

[project]
name = "wagtailgridder"
authors = [{name = "Timothy Allen", email = "tallen@wharton.upenn.edu"},]
description = "Dynamic, interactive grid layout for the Django CMS Wagtail."
readme = "README.md"
requires-python = ">=3.7"
keywords = ["wagtail", "cms", "gridder", "theme", "dynamic"]
license = {text = "BSD-3-Clause"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Django",
    "Framework :: Wagtail",
    "Framework :: Wagtail :: 3",
    "Framework :: Wagtail :: 4",
    "Framework :: Wagtail :: 5",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "wagtail>=3",
]
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/wharton/wagtailgridder"
"Repository" = "https://github.com/wharton/wagtailgridder"
"Documentation" = "https://github.com/wharton/wagtailgridder"